@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho
scale 0.95
hide empty members

package "com.hotel.model" {
    class Reservation
    class Chambre
    class Client
    class Facture
    class ServiceSupplementaire
    class Utilisateur
    class RoleUtilisateur <<Enumeration>>
}

package "com.hotel.service" {
    
    interface IReservationService {
        + createReservation(Reservation)
        + checkIn(int)
        + checkOut(int)
    }

    interface IChambreService {
        + updateStatut(int, Statut)
    }

    interface IClientService {
        + registerClient(Client)
    }

    interface IFactureService {
        + generateFacture(int) : Facture
    }

    interface IServiceSupplementaireService {
        + addServiceToReservation(int, int)
    }
}

package "com.hotel.security" {
    class AuthenticationService {
        + login(username, password) : Utilisateur
        + getUtilisateurConnecte() : Utilisateur
    }
    
    class PermissionManager {
        + {static} hasPermission(RoleUtilisateur, String) : boolean
    }
}

' Relations Service -> Entité (Gestion)
IReservationService --> Reservation : gère
IChambreService --> Chambre : gère
IClientService --> Client : gère
IFactureService --> Facture : produit
IServiceSupplementaireService --> ServiceSupplementaire : gère

' Relations Entités (Structure)
Reservation --> Client : effectuée par
Reservation --> Chambre : concerne
Reservation *-- ServiceSupplementaire : inclut
Facture --> Reservation : liée à
Utilisateur --> RoleUtilisateur : a un

' Relations Sécurité (Dépendances transverses)
AuthenticationService --> Utilisateur : authentifie
IReservationService ..> PermissionManager : vérifie droits
IChambreService ..> PermissionManager : vérifie droits
AuthenticationService ..> RoleUtilisateur : vérifie

' Collaborations Métier
IFactureService ..> IReservationService : s'appuie sur
IReservationService ..> IChambreService : vérifie disponibilité

@enduml
